# oncepy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/oncepy/: __init__.py  _core.py  cache.py
tests/: test_core.py
